<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    app:cnb_unselectedColor="#666666"

    <item
        android:id="@+id/beranda"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_beranda"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:cnb_backgroundColor="@color/main"
        />

    <item
        android:id="@+id/riwayat"
        android:icon="@drawable/ic_list_24"
        android:title="@string/nav_catalog"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:cnb_backgroundColor="@color/main"
        />

    <item
        android:id="@+id/tentang"
        android:icon="@drawable/ic_help_24"
        android:title="@string/nav_about"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:cnb_backgroundColor="@color/main"
        />
</menu>