<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.umarsani.pab.tubes.fragments.InferenceFragment">

    <TextView
        android:id="@+id/text_inference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/result_meniran"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_inference_scientific"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/result_meniren_scientitific"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageView
        android:id="@+id/captured_image"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginEnd="32dp"
        android:background="@color/main"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/result_meniran" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/weed_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/main"
            android:scaleType="fitXY"
            android:src="@drawable/meniran"
            android:contentDescription="@string/result_meniran" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="32dp"
                    android:paddingTop="32dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="10dp"
                    android:text="@string/deskripsi_umum"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="32dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="32dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="10dp"
                    android:text="@string/descripsi_umum_value" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="32dp"
                    android:paddingTop="10dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="10dp"
                    android:text="@string/ciri_ciri"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="32dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="32dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="10dp"
                    android:text="@string/ciri_ciri_value" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
